# tiniRAG

./: .gitignore  CLAUDE.md  LICENSE  README.md  good_practices.md  guard_rails.md  prompt.md  pyproject.toml  tech_stack.md
docs/: build_log.md
tests/: test_cache.py  test_config.py  test_context.py  test_engine.py  test_guardrails.py  test_model_detect.py  test_optimizer.py  test_renderer.py  test_search.py  test_searxng_manager.py  test_session.py
tinirag/: __init__.py  cli.py  config.py
tinirag/core/: __init__.py  cache.py  context.py  engine.py  guardrails.py  model_detect.py  optimizer.py  renderer.py  search.py  searxng_manager.py  session.py
tinirag/data/: settings.yml
